# mini-scilab

./: .gitignore  README.md  scilab.cabal
Scilab/: Interpreter.hs  Lexer.hs  Parser.hs
tests/: tests.hs
