name: scilab
version: 0.0.1
build-type: Simple
cabal-version: >= 1.8
tested-with: GHC ==7.4.2

library
  exposed-modules:
    Scilab.Parser
    Scilab.Lexer
    Scilab.Interpreter
  build-depends:
    base == 4.5.*,
    deepseq == 1.3.*,
    containers == 0.4.*,
    vector == 0.9.*,
    text == 0.11.*,
    transformers == 0.3.*,
    mtl == 2.1.*,
    parsec == 3.1.*
  extensions: OverloadedStrings
  ghc-options: -Wall -Werror
  ghc-prof-options: -rtsopts -fprof-auto -fprof-cafs

test-suite tests
  type: exitcode-stdio-1.0
  main-is: tests.hs
  hs-source-dirs: tests
  build-depends:
   base == 4.5.*,
    deepseq == 1.3.*,
   vector == 0.9.*,
   HUnit == 1.2.*,
   scilab
  extensions: OverloadedStrings
  ghc-options: -Wall -Werror
  ghc-prof-options: -rtsopts -fprof-auto -fprof-cafs
